--- a/styles/_hot-ads.scss
+++ b/styles/_hot-ads.scss
@@ -23,7 +23,7 @@
         transition: transform 1s;
 
         &:hover {
-            transform: scale(1.2);
+            transform: scale(1.1);
             cursor: pointer;
         }
     }
