--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 768px){
+    
     header .navbar1 {
         display: none;
     }
@@ -26,9 +27,9 @@
                 padding-right: 2rem;
             }
 
-           #header-btn {
-               padding: 1rem;
-           }
+            & #header-btn {
+            padding: 1rem;
+            }
         }
     }
 
@@ -86,4 +87,8 @@
             }
         }
     }
+}
+
+@media only screen and (min-width:1024px) {
+    
 }
